Fix newsletter alignment

--- a/src/layouts/layout.css
+++ b/src/layouts/layout.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  align-items: baseline;
 }
 .row > input {
   flex-grow: 1;
